# TheSeeker

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: deploy-mdbook.yml  deploy-rustdoc.yml  deploy.yml
assets/: animations.assets.ron  audio.assets.ron  enemy.cfg.toml  gameplay.assets.ron  gfx.assets.ron  levels.assets.ron  locale.assets.ron  player.cfg.toml  sprites.assets.ron  test.cfg.toml  test.script.toml  ui.assets.ron
assets/animations/: PlayerIdle.anim.toml  PlayerRun.anim.toml  base.anim.toml
assets/animations/dialogue/: 000.anim.toml  001.anim.toml  002.anim.toml  003.anim.toml  004.anim.toml  006.anim.toml  007.anim.toml  008.anim.toml  009.anim.toml  010.anim.toml  012.anim.toml  013.anim.toml  014.anim.toml  015.anim.toml  016.anim.toml  017.anim.toml  018.anim.toml  019.anim.toml
assets/animations/merchant/: Idle.anim.toml
assets/animations/numbers/: 0.anim.toml
assets/animations/puzzles/: puzzle02.anim.toml  puzzle12.anim.toml  switch.anim.toml
assets/animations/spider/: Death.anim.toml  Decay.anim.toml  Defense.anim.toml  DefensiveAttack.anim.toml  Idle.anim.toml  OffensiveAttack.anim.toml  RangedAttack.anim.toml  Retreat.anim.toml  Sparks.anim.toml
assets/animations/ui/: AbilitiesBG.anim.toml  PassivesBG.anim.toml  SkillsBG.anim.toml  SkillsBG5Slots.anim.toml
assets/animations/weapons/: Hammer.anim.toml
assets/animations/yak/: Idle.anim.toml
assets/audio/: FallDown.flac  Footstep1.flac  Footstep10.flac  Footstep11.flac  Footstep12.flac  Footstep13.flac  Footstep2.flac  Footstep3.flac  Footstep4.flac  Footstep5.flac  Footstep6.flac  Footstep7.flac  Footstep8.flac  Footstep9.flac  HammerImpact1.flac  HammerImpact2.flac  HammerImpact3.flac  HammerImpact4.flac  HammerImpact5.flac  HammerImpactIce1.flac  HammerImpactIce2.flac  HammerImpactIce3.flac  HammerImpactIce4.flac  HammerImpactIce4New.flac  HammerImpactIce5.flac  HammerImpactIce6.flac  HammerImpactIce7.flac  HammerWhoosh1.flac  HammerWhoosh2.flac  HammerWhoosh3.flac  HammerWhoosh4.flac  ImpactBass2.flac  JumpUp.flac  JumpUp2.flac  JumpUp3.flac
assets/audio/attack/: DashDownImpact.flac  DashDownStart.flac  HammerImpact1.flac  HammerImpact2.flac  HammerImpact3.flac  HammerImpact4.flac  HammerSwing1.flac  HammerSwing2.flac  HammerSwing3.flac  HammerSwing4.flac  HammerSwingDown1.flac  HammerSwingDown2.flac  HammerWhirl.flac  Impact1.flac  Impact2.flac  Impact3.flac  Impact4.flac  ImpactBass1.flac  Shoot1.flac  Shoot2.flac  Shoot3.flac  Shoot4.flac  Slash1.flac  Slash2.flac  SwordImpact1.flac  SwordImpact2.flac  SwordImpact3.flac  SwordImpact4.flac  SwordImpact5.flac  SwordImpact6.flac  SwordImpact7.flac  SwordWhirl1.flac  SwordWhirl2.flac
assets/audio/fx/: PlayerGetsDamaged1.flac  PlayerGetsDamaged2.flac  PlayerGetsDamaged3.flac  PlayerGetsDamaged4.flac  XpOrbs.flac
assets/audio/generative/: Perc1.flac  Perc10.flac  Perc11.flac  Perc12.flac  Perc13.flac  Perc14.flac  Perc15.flac  Perc16.flac  Perc2.flac  Perc3.flac  Perc4.flac  Perc5.flac  Perc6.flac  Perc7.flac  Perc8.flac  Perc9.flac  Piano1.flac  Piano2.flac  Piano3.flac  Pluck1.flac  Pluck1v2.flac  Pluck2.flac  Pluck2v2.flac  Pluck3.flac  Pluck3v2.flac  Pluck4.flac  Pluck4v2.flac  TestClick.flac
assets/audio/movement/: Dash1a.flac  Dash1b.flac  Dash2a.flac  Dash2b.flac  Dash3a.flac  Dash3b.flac  FallImpact1.flac  FallImpact2.flac  FallImpact3.flac  FallImpact4.flac  FallStart1.flac  FallStart2.flac  FallStart3.flac  FallStart4.flac  FallStart5.flac  FallStart6.flac  JumpStart1.flac  JumpStart2.flac  JumpStart3.flac  JumpStart4.flac  JumpStart5.flac  JumpStart6.flac  JumpStart7.flac  Slide1.flac  Slide2.flac  Slide3.flac  Slide4.flac  Step1.flac  Step10.flac  Step11.flac  Step12.flac  Step13.flac  Step14.flac  Step15.flac  Step2.flac  Step3.flac  Step4.flac  Step5.flac  Step6.flac  Step7.flac  (+2 more)
assets/audio/music/: Ambience1.flac  Music1.flac  Music2.flac  Music3.flac  PurfaktAmbienceTest.flac
assets/audio/spider/: BigSpiderAttack1.flac  BigSpiderAttack2.flac  BigSpiderDeath1.flac  BigSpiderDeath2.flac  BigSpiderDeath3.flac  BigSpiderStep1.flac  BigSpiderStep2.flac  BigSpiderStep3.flac  BigSpiderStep4.flac  BigSpiderStep5.flac  BigSpiderStep6.flac  BigSpiderStep7.flac  BigSpiderStep8.flac  SmallDeath.flac  SmallSpiderAttack1.flac  SmallSpiderAttack2.flac  SmallSpiderAttack3.flac  SmallSpiderAttack4.flac  SmallSpiderDeath1.flac  SmallSpiderDeath2.flac  SmallSpiderDeath3.flac  SmallSpiderStep1.flac  SmallSpiderStep2.flac  SmallSpiderStep3.flac  SmallSpiderStep4.flac  SmallSpiderStep5.flac  SmallSpiderStep6.flac  SmallSpiderStep7.flac  SmallSpiderStep8.flac
assets/audio/yak/: Mooo1.flac  Mooo2.flac  Mooo3.flac
assets/enemies/: archetypes.toml
assets/enemies/archetypes/: RangedSpider.arch.toml  spider_big.arch.toml  spider_big_t2.arch.toml  spider_big_t3.arch.toml  spider_small.arch.toml  spider_small_t2.arch.toml  spider_small_t3.arch.toml
assets/enemies/brains/: generic_melee.fsm.toml  generic_ranged.fsm.toml
assets/levels/: 01.ldtk  level.01.ldtk  level.dev.ldtk
assets/locale/bg-BG/: bg-BG.ftl.ron  menu.ftl
assets/locale/en-US/: en-US.ftl.ron  menu.ftl
assets/locale/ru-RU/: menu.ftl  ru-RU.ftl.ron
assets/shaders/: ability_cooldown.wgsl  darkenss_post_processing.wgsl  darkness_post_processing.wgsl  enemy_hp.wgsl  fog.wgsl  hp_bar.wgsl  perlin_noise_2d.wgsl  perlin_noise_3d.wgsl  simplex_noise.wgsl
assets/shaders/post_processing/: darkness.wgsl  floaters.wgsl  (+3 more)
dependencies/seek_ecs_tilemap-bevy015/: README.md
doc/: book.toml
doc/src/: SUMMARY.md  game-design.md  policy.md  tech.md
engine/src/: animation.rs  assets.rs  audio.rs  ballistics_math.rs  condition.rs  data.rs  gent.rs  graphics.rs  input.rs  lib.rs  physics.rs  script.rs  time.rs
game/src/: appstate.rs  assets.rs  audio.rs  camera.rs  camera_bu.rs  cli.rs  dev.rs  game.rs  gamestate.rs  graphics.rs  level.rs  locale.rs  main.rs  parallax.rs  stepping_egui.rs  tilemap_staticify.rs  ui.rs
src/: appstate.rs  assets.rs  main.rs  time.rs
src/screens/: loading.rs
src/ui/: console.rs
(+293 files in other folders)
