[package]
name = "theseeker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "theseeker_engine"
path = "engine/src/lib.rs"

[[bin]]
name = "theseeker_game"
path = "game/src/main.rs"

[features]
dev = ["bevy/file_watcher"]
release = []
inspector = []

# dev: Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3
# dev: no LTO, lots of codegen units for parallelism during compilation
[profile.dev]
opt-level = 1
debug = false
lto = false
#codegen-units = 8
# release: Enable LTO and limit codegen units for better codegen
[profile.release]
opt-level = 3
lto = "thin"
#codegen-units = 1
debug = false

# Random little libraries
[dependencies]
anyhow = "1.0.97"
derive_more = { version = "2.0.1", features = ["full"] }
directories = "6.0.0"
enum-iterator = "2.1.0"
enum-map = "2.7.3"
fluent_content = "0.0.5"
glam = "0.29.2"
rand = "0.9.0"
serde_with = "3.12.0"
thiserror = "2.0.12"
toml = "0.8.20"
unic-langid = "0.9.5"
ran = "2.0.1"                                            #for lighter weight/easier use random noise then using rand
rodio = "0.19.0"
cpal = "0.15.3"
strum = "0.27"
strum_macros = "0.27"

bevy_egui = "0.33"
bevy-inspector-egui = "0.30"
bevy_fluent = "0.11.0"

# This specific rev was working main on may 28th.
# needed for moveble forcefields not availible in 0.10
# (also has some wgsl fixes)
bevy_hanabi = "0.14"
smallvec = "1.14.0"

iyes_perf_ui = { version = "0.4.0", optional = true }
num_cpus = "1.16.0"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.bevy]
version = "0.15"
default-features = true
features = ["flac", "jpeg", "wayland"]

[dependencies.bevy_asset_loader]
version = "0.22"
features = ["2d", "progress_tracking", "standard_dynamic_assets"]

[dependencies.bevy_common_assets]
version = "0.12"
features = ["toml", "ron"]

[dependencies.bevy_ecs_ldtk]
version = "0.11.0"
features = ["default"]

[dependencies.bevy_ecs_tilemap]
version = "0.15.0"
features = ["default"]

# [dependencies.iyes_bevy_extras]
# git = "https://github.com/IyesGames/iyes_bevy_extras"
# branch = "seeker-015"
# features = ["2d"]

[dependencies.iyes_progress]
version = "0.13.1"
features = ["assets"]

[dependencies.leafwing-input-manager]
version = "0.16"
# git = "https://github.com/TheSeekerGame/leafwing-input-manager"
# branch = "fixed_update_0.13"

[dependencies.rapier2d]
version = "0.18"

# Unavoidable with how Bevy is designed
[lints.clippy]
type_complexity = "allow"
