[package]
name = "theseeker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "theseeker_engine"
path = "engine/src/lib.rs"

[[bin]]
name = "theseeker_game"
path = "game/src/main.rs"

[features]
dev = ["bevy/file_watcher"]
release = []
inspector = []

# dev: Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3
# dev: no LTO, lots of codegen units for parallelism during compilation
[profile.dev]
opt-level = 1
debug = false
lto = false
#codegen-units = 8
# release: Enable LTO and limit codegen units for better codegen
[profile.release]
opt-level = 3
lto = "thin"
#codegen-units = 1
debug = false

# Random little libraries
[dependencies]
anyhow = "1.0.97"
enum-iterator = "2.1.0"
glam = "0.29.2"
rand = "0.9.0"
serde_with = "3.12.0"
thiserror = "2.0.12"
toml = "0.8.20"
rodio = "0.20"
strum = "0.27"
strum_macros = "0.27"

bevy_egui = "0.35"
bevy-inspector-egui = "0.31"

# This specific rev was working main on may 28th.
# needed for moveble forcefields not availible in 0.10
# (also has some wgsl fixes)
bevy_hanabi = "0.16"

iyes_perf_ui = { version = "0.5.0", optional = true }

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.bevy]
version = "0.16"
default-features = true
features = ["flac", "jpeg", "wayland"]

[dependencies.bevy_asset_loader]
version = "0.23"
features = ["2d", "progress_tracking", "standard_dynamic_assets"]

[dependencies.bevy_common_assets]
version = "0.13"
features = ["toml", "ron"]

[dependencies.bevy_ecs_ldtk]
version = "0.12.0"
features = ["default"]

[dependencies.bevy_ecs_tilemap]
version = "0.16.0"
features = ["default"]

[dependencies.leafwing-input-manager]
version = "0.17"

[dependencies.bevy_rapier2d]
version = "0.30"
features = ["dim2", "debug-render-2d", "parallel"]

# Unavoidable with how Bevy is designed
[lints.clippy]
type_complexity = "allow"
pedantic = "warn"
nursery = "warn"
